# aris

./: .gitignore  AUTHORS  CNAME  Cargo.toml  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  TODO-Java  TODO.txt  build.gradle  build.rs  compile  configure  configure.ac  databate_schema.txt  index.html  rustfmt.toml  server.py  settings.gradle  styles.css
aris/: Cargo.toml  and-conn.xpm  build.rs  conf-file.c  ctr-conn.xpm  elm-conn.xpm  exl-conn.xpm  list.c  menu.c  nil-conn.xpm  or-conn.xpm  process.c  proof.c  sen-data.c  sentence.c  sexpr-process-infer.c  sexpr-process.c  tau-conn.xpm  undo.c  unv-conn.xpm  var.c  vec.c
aris/src/: combinatorics.rs  equivalences.rs  equivs.rs  expr.rs  expression.rs  lib.rs  macros.rs  parser.rs  proofs.rs  rewrite_rules.rs  rules.rs  zipper_vec.rs
aris/src/proofs/: java_shallow_proof.rs  lined_proof.rs  pooledproof.rs  proof_tests.rs  treeproof.rs  treeproof_tests.rs  xml_interop.rs
aris/src/solver_integration/: solver.rs
assign-client/: build.gradle
assign-server/: build.gradle
auto-grader/: Cargo.toml
auto-grader/src/: main.rs
bindings/js/: Cargo.toml
bindings/js/src/: expression.rs  lib.rs  macros.rs  parser.rs  proofs.rs  rules.rs
client/: libs
doc/: Adding.html  Axioms.html  Basic-Usage.html  Boolean-Rules.html  Config-File.html  Connectives.html  Customization.html  Dialog.html  Equivalence-Rules.html  Induction.html  Inference-Rules.html  Interoperability.html  Introduction.html  Isabelle_002fIsar.html  Keyboard-Shortcuts.html  Makefile.am  Menu-Options.html  Miscellaneous-Rules.html  Options.html  Other-Key-Shortcuts.html  Predicate-Rules.html  Proof-Windows.html  Recursion.html  Rules-Index.html  Rules-Table.html  ad.html  (+57 more)
java/: .gitignore  CMakeLists.txt  depends  mingw-bundledlls.py  sentenceformat.txt
java/aris/: app.c  aris.c  callbacks.c  con-conn.xpm  goal.c  icon.xpm  interop-isar.c  jniaris.c  rules-table.c  sexpr-process-equiv.c  sexpr-process-quant.c
java/include/: app.h  conf-file.h  edu_rpi_aris_ArisNative.h  jniarisutil.h  pound.h  rules-table.h  sen-data.h  sentence.h
java/res/edu/rpi/aris/gui/: main_window.css  main_window.fxml  proof_line.fxml
java/src/edu/rpi/aris/: ArisNative.java
java/src/edu/rpi/aris/gui/: AcceleratorManager.java  Aris.java  LineDeletionListener.java  MainWindow.java  Proof.java  ProofLine.java
java/src/edu/rpi/aris/proof/: Claim.java  Expression.java  Operator.java  RegexMatcher.java  SentenceUtil.java
java/src/edu/rpi/aris/rules/: HypotheticalSyllogism.java  ModusPonens.java  ModusTollens.java  Rule.java  RuleList.java  Simplification.java
java/test/edu/rpi/aris/proof/: SentenceUtilTest.java
java/test/edu/rpi/aris/rules/: ModusPonensTest.java  SimplificationTest.java
libaris/src/main/rust/: Cargo.toml  aris.h  aris.py  build.rs  index.html  propositional_logic_arguments_for_proofs_ii_problem_10.bram
libaris/src/main/rust/src/: equivalences.rs  expression.rs  java_interop.rs  lib.rs  lineproof.rs  parser.rs  proofs.rs  rewrite_rules.rs  rules.rs  zipper_vec.rs
libaris/src/main/rust/src/c_interop/: c_expression.rs
libaris/src/main/rust/src/java_interop/: java_expression.rs  java_proof.rs  java_rule.rs
libaris/src/main/rust/src/proofs/: java_shallow_proof.rs  lined_proof.rs  pooledproof.rs  proof_tests.rs  treeproof.rs  treeproof_tests.rs  xml_interop.rs
libaris/src/main/rust/src/rules/: java_rule.rs
src/: Makefile  Makefile.am  Makefile.in  aio.c  app.c  aris  aris-proof.c  aris-proof.h  aris.c  assign_pam_auth.c  bic-conn.xpm  callbacks.c  callbacks.h  conf-file.h  config.h  config.h.in.~1~  config.h.in~  equivalences.rs  expression.rs  goal.h  icon.xpm  lib.rs  list.h  not-conn.xpm  parser.rs  process-main.c  process.c  process.h  proof.c  proofs.rs  rewrite_rules.rs  rules-table.c  rules-table.h  rules.h  rules.rs  sen-data.c  sen-parent.c  sen-parent.c.BASE  sen-parent.c.OTHER  sen-parent.c.THIS  (+10 more)
src/c_interop/: c_expression.rs
src/edu/rpi/aris/: ArisNative.java  ClientTest.java  ConfigurationManager.java  Main.java
src/edu/rpi/aris/client/: Client.java  MessageReceivedListener.java
src/edu/rpi/aris/gui/: AcceleratorManager.java  Aris.java  ConfigurationManager.java  EditMode.java  GoalLine.java  GuiConfig.java  HistoryManager.java  MainWindow.java  Proof.java  ProofLine.java  RulesManager.java
src/edu/rpi/aris/gui/event/: GoalChangedEvent.java  HistoryEvent.java  LineChangedEvent.java  PremiseChangeEvent.java  RuleChangeEvent.java  SentenceChangeEvent.java
src/edu/rpi/aris/gui/submit/: AddProofDialog.java  Assignment.java  AssignmentInfo.java  AssignmentWindow.java  ClientInfo.java  Course.java  InfoType.java  InstructorInfo.java  ProofInfo.java  StudentInfo.java  Submission.java  SubmissionInfo.java  User.java
src/edu/rpi/aris/net/: MessageReceivedListener.java  NetUtil.java
src/edu/rpi/aris/net/client/: Client.java
src/edu/rpi/aris/net/server/: ClientHandler.java  DatabaseManager.java  Server.java  ServerConfig.java
src/edu/rpi/aris/proof/: Expression.java  ExpressionParseException.java  Goal.java  Line.java  LineChangeListener.java  Operator.java  Premise.java  Proof.java  RegexMatcher.java  SaveManager.java  SentenceUtil.java
src/edu/rpi/aris/rules/: Addition.java  Conjunction.java  ConstructiveDilemma.java  DisjunctiveSyllogism.java  ExcludedMiddle.java  HypotheticalSyllogism.java  ModusPonens.java  ModusTollens.java  Rule.java  RuleList.java  Simplification.java
src/edu/rpi/aris/server/: Server.java
src/java_interop/: java_proof.rs  java_rule.rs
src/js_interop/: js_ui.rs
src/proofs/: java_shallow_proof.rs  pooledproof.rs  proof_tests.rs  treeproof.rs  treeproof_tests.rs  xml_interop.rs
src/solver_integration/: solver.rs
web-app/: Cargo.toml
web-app/src/: box_chars.rs  lib.rs  proof_ui_data.rs  ui.rs  util.rs
web-app/src/components/: app.rs  expr_ast_widget.rs  expr_entry.rs  menu_widget.rs  mod.rs  nav_bar.rs  proof_widget.rs  tabbed_container.rs
web-app/src/components/proof_widget/: actions.rs  mod.rs
web-app/static/: dark-theme.css  index.html  styles.css
(+603 files in other folders)
