[package]
name = "aris"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
nom = "4.1.1"
petgraph = "0.5.1"
sha2 = "0.8.1"
varisat = "0.2.2"
xml-rs = "0.8.3"
itertools = "0.10.0"
frunk_core = "0.3.2"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = { version = "1.0.125", features = ["derive"] }
maplit = "1.0.2"

[build-dependencies]
version_check = "0.9.3"
