[package]
name = "aris"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.21.0"
lazy_static = "1.4.0"
nom = "7.1.3"
petgraph = "0.6.3"
sha2 = "0.10.6"
varisat = "0.2.2"
xml-rs = "0.8.13"
itertools = "0.10.5"
frunk_core = "0.4.1"
strum = "0.24.1"
strum_macros = "0.24.3"
serde = { version = "1.0.160", features = ["derive"] }
maplit = "1.0.2"

[build-dependencies]
version_check = "0.9.4"
