[package]
name = "aris-web-app"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2021"

[dependencies]
aris = { path = "../aris" }
yew = "0.17.4"
gloo = "0.2.1"
wasm-bindgen = "0.2.73"
wee_alloc = "0.4.5"
js-sys = "0.3.50"
web-sys = { version = "0.3.50", features = ["HtmlAnchorElement"] }
frunk_core = "0.3.2"
strum = "0.20.0"
yew-octicons = "0.1.1"

[lib]
crate_type = ["cdylib", "rlib"]
