[package]
name = "aris-web-app"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]
edition = "2021"

[dependencies]
aris = { path = "../aris" }
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
wasm-bindgen = "0.2.84"
js-sys = "0.3.62"
web-sys = { version = "0.3.61", features = ["HtmlAnchorElement"] }
frunk_core = "0.4.1"
strum = "0.24.1"
yew-octicons = "0.4.0"
derivative = "2.2.0"

[lib]
crate_type = ["cdylib", "rlib"]
