[package]
name = "aris-js"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aris = { path = "../../aris" }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
frunk_core = "0.3.2"
js-sys = "0.3.50"

# This crate allows propagating `serde` errors with the `?` operator, which is
# safer than `wasm_bindgen::UnwrapThrowExt`, because `UnwrapThrowExt` doesn't
# run destructors and can cause memory leaks.
serde-wasm-bindgen = "0.1.3"
