[package]
name = "libaris-rs"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]

[dependencies]
#either = "1.5.0"
frunk = "0.2.2"
jni = "0.10.2"
nom = "4.1.1"
petgraph = "0.4.13"
xml-rs = "0.8.0"
lazy_static = "1.4.0"

stdweb = { version = "0.4.20", optional = true }
yew = { version = "0.11.0", optional = true }

[features]
web-main = ["stdweb", "yew"]

[build-dependencies]
cbindgen = "*"

[lib]
name = "libaris"
crate_type = ["cdylib", "rlib"]

[[bin]]
name = "auto_grader"
path = "src/bin/auto_grader.rs"

[[bin]]
name = "aris-wasm-ui"
path = "src/bin/aris_wasm_ui.rs"
required-features = ["web-main"]

[profile.release]
debug = true # enable debugging symbols in release mode (primarily for line numbers for RUST_BACKTRACE=1)
